index.html is nu klaar

--- a/index.html
+++ b/index.html
@@ -50,16 +50,18 @@
             <p class="usp">Je kunt 7 dagen per week bij ons terecht. Ons <a href="team.html"team>team</a> van vakkundige
                 medewerkers helpt je graag op weg.
             </p>
-            <button type="submit"></button>
+            <button class="contact-us" type="button" id="contact-us" name="contact-us">Neem contact op</button>
+        </div>
     </section>
 
-
-</div>
-
+    <section class="third-section">
+        <div class="element-3">
+            <img src="assets/examples/uitklap-vragen.gif" alt="faq">
+        </div>
+    </section>
 </main>
-<footer></footer>
-
-<form type="but"
 
 </body>
+<footer>
+</footer>
 </html>
