--- a/index.html
+++ b/index.html
@@ -5,63 +5,105 @@
     <link rel="stylesheet" href="styles/styles.css" >
 
     <title>Domein.shop.nl</title>
-
 </head>
 <body>
-<header>
-    <div class="header-content">
+<header class="header">
 
-     <img class="image-header" src="./assets/images/mountains.jpg" alt="Mountains">
-        <h1>Domein.Shop.nl</h1>
-        <p>Jouw domeinnaam registeren in slechts 1 minuut!</p>
+    <h1 class="website-title">Domein.Shop</h1>
+    <p class="header-text-2">Jouw domeinnaam registeren in slechts 1 minuut!</p>
 
-    </div>
+    <form onsubmit="javascript">
+        <label class="url">
+        <input type="text" placeholder="Is jouw domein nog vrij?" name="url">
+    </label>
+        <button class="check-domain">
+            <input type="submit" value="Check beschikbaarheid" id="check-domain-name">
+        </button>
+    </form>
+
 </header>
-
 <main>
-    <section class="first-section">
-    <div class="element-1-image-wrapper">
+    <section class="testimonials">
+        <h3>Wat zeggen klanten over ons</h3>
+
+    <div class="element-1-box-wrapper">
         <img class="fav-icon" src="assets/icons/quote-left.png" alt="Quote">
-        <h2 class="title-clients">Wat zeggen klanten over ons</h2>
         <p class="content-jane">Al jaren klant bij Domein.Shop. De service is goed en medewerkers zijn zeer klantvriendelijk
         snelle response zelfs op momenten dat je het niet verwacht.
         </p>
-        <span class="avatar-jane">
-            <img class="jane-doe" src="assets/images/avatar-jane.png" alt="Jane">
-            Jane Doe, Managing director
-        </span>
 
-        <div class="element-2-image-wrapper">
+            <img class="jane-doe" src="assets/images/avatar-jane.png" alt="Jane">
+        <span>Jane Doe, Managing director</span>
+
+    </div>
+
+        <div class="element-2-john">
             <img class="fav-icon" src="assets/icons/quote-left.png" alt="Quote">
             <p class="content-john">Ik ben tevreden over Domein.Shop. Met name de snelle reactie op mijn vragen
                 en goede service maakt dat ik TransIP aan iedereen aanbeveel.
             </p>
-            <span class="avatar-john">
-            <img class="john-smith" src="assets/images/avatar-jane.png" alt="Jane">
-            John Smith, Frontend Developer
-            </span>
+
+            <img class="john-smith" src="assets/images/avatar-john.png" alt="John">
+            <span> John Smith, Frontend Developer</span>
+
         </div>
     </section>
 
-    <section class="second-section">
-    <h2 class="we-are-ready">Wij staan voor je klaar</h2>
-        <div class="element-3">
+    <section class="support">
+    <h3>Wij staan voor je klaar</h3>
             <img src="assets/images/callcenter.jpg" alt="Callcenter">
-            <p class="usp">Je kunt 7 dagen per week bij ons terecht. Ons <a href="team.html"team>team</a> van vakkundige
+            <p class="usp">Je kunt 7 dagen per week bij ons terecht. Ons <a href="team.html">team</a> van vakkundige
                 medewerkers helpt je graag op weg.
             </p>
             <button class="contact-us" type="button" id="contact-us" name="contact-us">Neem contact op</button>
-        </div>
     </section>
 
-    <section class="third-section">
-        <div class="element-3">
-            <img src="assets/examples/uitklap-vragen.gif" alt="faq">
-        </div>
+    <section class="faq">
+            <h3>Veelgestelde vragen</h3>
+        <details>
+            <summary>Wat is een goede domeinnaam?</summary>
+            <p>Een goede domeinnaam moet aan enkele eisen voldoen. Ten eerste mag jouw domeinnaam niet in strijd
+                zijn met de openbare orde of de goede zeden. Dit betekent dat je geen ongepaste domeinnaam mag
+                registreren. Verder mag een domeinnaam enkel uit letters, cijfers en eventueel een liggend
+                streepje bestaan. Andere leestekens zijn niet toegestaan.</p>
+        </details>
+        <details>
+            <summary>Welke extensie moet ik kiezen voor mijn domeinnaam?</summary>
+            <p>Je mag helemaal zelf kiezen welke extensie jouw domeinnaam krijgt. Dit kan een .nl-extensie zijn,
+                maar ook een .be-extensie, een .de-extensie of een .com-extensie. Vraag jezelf af op welke markt
+                je je gaat richten, in het heden én in de toekomst. Ben je niet van plan je business de grens
+                over te brengen? Dan heb je eigenlijk alleen een .nl-domeinnaam nodig. Je kunt andere extensies
+                registreren om te voorkomen dat anderen dit doen, maar deze domeinnamen ga je waarschijnlijk
+                niet zelf gebruiken.</p>
+        </details>
+        <details>
+            <summary>Wat moet ik doen als mijn domeinnaam al geregistreerd is?</summary>
+            <p>Is de domeinnaam die jij wil registreren, al geregistreerd door iemand anders? Dan kun je deze
+                niet opnieuw registreren. Jouw domeinnaam moet namelijk uniek zijn. Als je gewenste domeinnaam
+                al geregistreerd is, heb je twee mogelijkheden. Ten eerste kun je ervoor kiezen een alternatieve
+                domeinnaam te registreren. Dit kan een domeinnaam zijn die op jouw eerste keuze lijkt, maar ook
+                een heel ander domein. Je vindt vanzelf wel een goede domeinnaam die nog vrij is.</p>
+        </details>
+        <details>
+            <summary>Is het mogelijk meerdere domeinnamen te registreren?</summary>
+            <p>Ja, het is zeker mogelijk meerdere domeinnamen te registreren. Als je zou willen, kun je wel
+                tientallen domeinnamen registreren. Houd er wel rekening mee dat iedere domeinnaam die je
+                registreert, geld kost. Hoe meer domeinnamen je registreert, des te meer geld je moet betalen
+                voor deze domeinen.</p>
+        </details>
+        <details>
+            <summary>Is het mogelijk een domeinnaam te registreren en deze niet te gebruiken?</summary>
+            <p>Ja, je kunt een domeinnaam registreren zonder deze te gebruiken. Dit gebeurt regelmatig. Ten
+                eerste zijn er veel ondernemers die de domeinnaam van hun nieuwe bedrijf alvast registreren,
+                terwijl ze nog lang geen website hebben. Zij willen simpelweg zeker weten dat de domeinnaam nog
+                beschikbaar is als hun website af is en registreren deze daarom alvast. Verstandig, zeker als je
+                een domeinnaam wil registreren die andere mensen ook interessant kunnen vinden.</p>
+        </details>
     </section>
 </main>
-
-</body>
-<footer>
+<footer id="footer">
+    <p> © 2022 all rights reserved</p>
 </footer>
+</body>
+
 </html>
